[package]
name = "github_issues_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
diesel = { version = "2.1", features = ["sqlite"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"

[dev-dependencies]

